fedocal: specify the scopes when querying oidc
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/templates/fedocal.cfg
+++ b/roles/openshift-apps/fedocal/templates/fedocal.cfg
@@ -52,8 +52,18 @@ APP_URL = 'https://calendar.stg.fedoraproject.org/' + APPLICATION_ROOT
 FAS_OPENID_ENDPOINT = 'https://id.stg.fedoraproject.org/openid/'
 SITE_ROOT = 'https://calendar.stg.fedoraproject.org'
 SITE_URL = '%s/' % SITE_ROOT
+OIDC_SCOPES = [
+    'openid', 'email', 'profile',
+    'https://id.fedoraproject.org/scope/agreements',
+    'https://id.fedoraproject.org/scope/groups',
+]
 {% else %}
 APP_URL = 'https://calendar.fedoraproject.org/' + APPLICATION_ROOT
 SITE_ROOT = 'https://calendar.fedoraproject.org'
 SITE_URL = '%s/' % SITE_ROOT
+OIDC_SCOPES = [
+    'openid', 'email', 'profile',
+    'https://id.fedoraproject.org/scope/cla',
+    'https://id.fedoraproject.org/scope/groups',
+]
 {% endif %}
