fedoca: define the OIDC_OPENID_REALM
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/templates/fedocal.cfg
+++ b/roles/openshift-apps/fedocal/templates/fedocal.cfg
@@ -57,6 +57,7 @@ OIDC_SCOPES = [
     'https://id.fedoraproject.org/scope/agreements',
     'https://id.fedoraproject.org/scope/groups',
 ]
+OIDC_OPENID_REALM = '%s/oidc_callback' % SITE_ROOT
 {% else %}
 APP_URL = 'https://calendar.fedoraproject.org/' + APPLICATION_ROOT
 SITE_ROOT = 'https://calendar.fedoraproject.org'
@@ -66,4 +67,5 @@ OIDC_SCOPES = [
     'https://id.fedoraproject.org/scope/cla',
     'https://id.fedoraproject.org/scope/groups',
 ]
+OIDC_OPENID_REALM = '%s/oidc_callback' % SITE_ROOT
 {% endif %}
