--- a/roles/openshift-apps/monitor-dashboard/templates/configmap.yml
+++ b/roles/openshift-apps/monitor-dashboard/templates/configmap.yml
@@ -24,4 +24,12 @@ data:
           connMaxLifetime: 14400  # Grafana v5.4+
           postgresVersion: 1200 # 903=9.3, 904=9.4, 905=9.5, 906=9.6, 1000=10
           timescaledb: false
+      - name: Promscale
+        type: prometheus
+        url: https://promscale.apps.ocp.ci.centos.org/
+        access: proxy
+        basicAuth: false
+        withCredentials:false
+        isDefault:false
+
 
