Typo in the notifier file for dashboards

--- a/playbooks/openshift-apps/monitor_dashboard.yml
+++ b/playbooks/openshift-apps/monitor_dashboard.yml
@@ -28,7 +28,7 @@
 
   - role: openshift/object
     app: monitor-dashboard
-    file: notifiers.yml
+    file: notifiers.yaml
     objectname: notifiers.yml
 
   - role: openshift/object
