oraculum: Prepare playbooks for production deployment

--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -59,7 +59,11 @@ spec:
         - name: SECRET_KEY
           value: "{{ oraculum_secret_key }}"
         - name: OPENSHIFT_PROD
+          {% if env == 'staging' %}
+          value: "0"
+          {% else %}
           value: "1"
+          {% endif %}
         # WatchDog emails
         - name: SEND_ERROR_EMAILS
           value: "false"
@@ -104,7 +108,11 @@ metadata:
     app: oraculum
   name: oraculum-worker
 spec:
-  replicas: 2 # Change me to some biiig numba after you got me working
+  {% if env == 'staging' %}
+  replicas: 2
+  {% else %}
+  replicas: 1 # Change me to some biiig numba after you got me working
+  {% endif %}
   selector:
     app: oraculum
     deploymentconfig: oraculum
@@ -142,7 +150,11 @@ spec:
         - name: SECRET_KEY
           value: "{{ oraculum_secret_key }}"
         - name: OPENSHIFT_PROD
+          {% if env == 'staging' %}
+          value: "0"
+          {% else %}
           value: "1"
+          {% endif %}
         # WatchDog emails
         - name: SEND_ERROR_EMAILS
           value: "false"
@@ -213,7 +225,11 @@ spec:
         - name: SECRET_KEY
           value: "{{ oraculum_secret_key }}"
         - name: OPENSHIFT_PROD
+          {% if env == 'staging' %}
+          value: "0"
+          {% else %}
           value: "1"
+          {% endif %}
         # WatchDog emails
         - name: SEND_ERROR_EMAILS
           value: "false"
@@ -286,7 +302,11 @@ spec:
         - name: SECRET_KEY
           value: "{{ oraculum_secret_key }}"
         - name: OPENSHIFT_PROD
+          {% if env == 'staging' %}
+          value: "0"
+          {% else %}
           value: "1"
+          {% endif %}
         # WatchDog emails
         - name: SEND_ERROR_EMAILS
           value: "false"
@@ -373,7 +393,11 @@ spec:
         - name: SUBDIR
           value: "/"
         - name: API
+          {% if env == 'staging' %}
           value: "https://packager-dashboard.stg.fedoraproject.org/api/v1/"
+          {% else %}
+          value: "https://packager-dashboard.fedoraproject.org/api/v1/"
+          {% endif %}
   triggers:
   - type: ConfigChange
   - type: ImageChange
