Typo in dashboard definition for fedora_coreos

--- a/roles/openshift-apps/monitor-dashboard/templates/dashboard_config.yml
+++ b/roles/openshift-apps/monitor-dashboard/templates/dashboard_config.yml
@@ -11,3 +11,5 @@ data:
       {{ load_file('dashboard_monitor_gating.json.j2') | indent(6) }}
   dashboard_anitya.json: |-
       {{ load_file('dashboard_anitya.json.j2') | indent(6) }}
+  dashboard_fedora_coreos_updates.json: |-
+      {{ load_file('dashboard_fedora_coreos_updates.json.j2') | indent(6) }}
