--- a/handlers/restart_services.yml
+++ b/handlers/restart_services.yml
@@ -178,3 +178,16 @@
 
 - name: restart chronyd
   service: name=chronyd state=restarted
+
+- name: restart mbs poller
+  systemd:
+    name: mbs-poller
+    state: restarted
+  when: not mbs_frontend
+
+- name: restart mbs workers
+  systemd:
+    name: "mbs-worker@{{ item }}"
+    state: restarted
+  with_sequence: start=0 end={{ mbs_num_workers - 1 }}
+  when: not mbs_frontend
