fedocal: enable header_scheme
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -695,6 +695,7 @@
     balancer_name: app-os
     targettype: openshift
     keephost: true
+    header_scheme: true
     tags: calendar
 
   - role: httpd/reverseproxy
