--- a/roles/rabbitmq_cluster/tasks/main.yml
+++ b/roles/rabbitmq_cluster/tasks/main.yml
@@ -169,7 +169,7 @@
   - rabbitmq_cluster
   - config
 
-- name: Add a policy to limit queues to 1GB and remove after a month of no use
+- name: Add a policy to limit queues to 1GB and remove after a month of no use for /pubsub
   run_once: true
   delegate_to: "rabbitmq01{{ env_suffix }}.{{ item }}.fedoraproject.org"
   with_items: "{{ datacenter }}"
@@ -184,6 +184,23 @@
       # Queues can use at most 1GB of storage
       max-length-bytes: 1073741824
     vhost: /pubsub
+  tags:
+  - rabbitmq_cluster
+  - config
+
+- name: Add a policy to remove after a week of no use for /bodhi
+  run_once: true
+  delegate_to: "rabbitmq01{{ env_suffix }}.{{ item }}.fedoraproject.org"
+  with_items: "{{ datacenter }}"
+  rabbitmq_policy:
+    apply_to: queues
+    name: bodhi_sweeper
+    state: present
+    pattern: ".*"
+    tags:
+      # Unused queues are killed after 1000 * 60 * 60 * 7 milliseconds (~a week)
+      expires: 25200000
+    vhost: /bodhi
   tags:
   - rabbitmq_cluster
   - config
