--- a/roles/openshift-apps/oraculum/templates/buildconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/buildconfig.yml
@@ -14,7 +14,7 @@ spec:
     type: Git
     git:
       uri: https://pagure.io/fedora-qa/oraculum
-      ref: "python36"
+      ref: "master"
   strategy:
     type: Source
     sourceStrategy:
