--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -88,12 +88,7 @@ server.modules = (
 {% endif %}
 )
 
-cgi.assign = ( ".pl"  => "/usr/bin/perl",
-               ".cgi" => "/usr/bin/perl",
-               ".rb"  => "/usr/bin/ruby",
-               ".erb" => "/usr/bin/eruby",
-               ".py"  => "/usr/bin/python",
-               ".php" => "/usr/bin/php-cgi" )
+cgi.assign = ( ".php" => "/usr/bin/php-cgi" )
 
 ##
 #######################################################################
