--- a/playbooks/groups/osbs/deploy-cluster.yml
+++ b/playbooks/groups/osbs/deploy-cluster.yml
@@ -27,6 +27,7 @@
     - rkhunter
     - nagios_client
     - hosts
+    - ipa/client
     - { role: fas_client, when: env != "staging" }
     - sudo
     - collectd/base
