--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: Enroll system as IPA client
   command:
     cmd: ipa-client-install
-         --hostname={{ ansible_fqdn }}
+         --hostname={{ inventory_hostname }}
          --domain={{ ipa_realm | lower }}
          --realm={{ ipa_realm }}
          -p admin -w {{ ipa_admin_password }}
