ipa: More ansible_fqdn -> inventory_hostname
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/common.yml
+++ b/roles/ipa/client/tasks/common.yml
@@ -19,4 +19,4 @@
     ipaadmin_password: "{{ ipa_admin_password }}"
     action: member
     state: present
-    host: "{{ ansible_fqdn }}"
+    host: "{{ inventory_hostname }}"
