--- a/playbooks/groups/mbs.yml
+++ b/playbooks/groups/mbs.yml
@@ -18,7 +18,7 @@
   - rkhunter
   - nagios_client
   - hosts
-  - ipa/client
+  - { role: ipa/client, when: env == "staging" }
   - { role: fas_client, when: env != "staging" }
   - rsyncd
   - sudo
