--- a/playbooks/groups/osbs/deploy-cluster.yml
+++ b/playbooks/groups/osbs/deploy-cluster.yml
@@ -27,7 +27,7 @@
     - rkhunter
     - nagios_client
     - hosts
-    - ipa/client
+    - { role: ipa/client, when: env == "staging" }
     - { role: fas_client, when: env != "staging" }
     - sudo
     - collectd/base
@@ -45,6 +45,7 @@
          name: subscription-manager-rhsm-certificates
          state: present
     - import_tasks: "{{ tasks_path }}/2fa_client.yml"
+      when: env != "staging"
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
   handlers:
