--- a/playbooks/groups/ipa.yml
+++ b/playbooks/groups/ipa.yml
@@ -14,6 +14,7 @@
   - base
   - rkhunter
   - nagios_client
+  - collectd/base
   - hosts
   - { role: fas_client, when: env != "staging" }
   - rsyncd
