ipa/client: clean up old 2FA sudo configuration
The old, TOTPCGI-enabled sudo configuration breaks when it should be
verifying password and OTP token against what's stored in IPA.

If found, or /etc/pam.d/sudo or the sudo package are missing, reinstall
the sudo package to fix.

Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -21,6 +21,14 @@
     - ipa/client
     - config
 
+- name: Clean up annoying remnants of previous FAS client installations
+  import_tasks: cleanup.yml
+  # don't muck with prod for now
+  when: env == 'staging'
+  tags:
+    - ipa/client
+    - fas-client-cleanup
+
 - name: Basic configuration for client on IPA cluster
   delegate_to: "{{ ipa_server }}"
   import_tasks: common.yml
