Added an openshift-cronjob for the fedocal openshift deployment.

--- a/playbooks/openshift-apps/fedocal.yml
+++ b/playbooks/openshift-apps/fedocal.yml
@@ -79,3 +79,8 @@
     app: fedocal
     file: deploymentconfig.yml
     objectname: deploymentconfig.yml
+
+  - role: openshift/object
+    app: fedocal
+    file: cron.yml
+    objectname: cron.yml
