Attempting to workaround the image definition to reference the cluster-build image in the projects image-stream

--- a/roles/openshift-apps/fedocal/files/cron.yml
+++ b/roles/openshift-apps/fedocal/files/cron.yml
@@ -16,7 +16,7 @@ spec:
         spec:
           containers:
           - name: fedocal-cron
-            image: fedocal:latest
+            image: docker-registry.default.svc:5000/fedocal/fedocal:latest
             command: ["python3"]
             args: ["/usr/bin/fedocal_cron.py"]
             env:
