distgit/pagure: block pushing to master
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -70,12 +70,8 @@ ACL_BLOCK_UNSPECIFIED = False
 ACL_PROTECTED_NAMESPACES = ['rpms', 'modules', 'container']
 RCM_GROUP = 'relenggroup'
 RCM_BRANCHES = ['refs/heads/f[0-9]+', 'refs/tags/.*', 'refs/heads/.*']
-# Pushing to c* stuff is never allowed
-{% if env == "staging" %}
+# Pushing to c* stuff and master is never allowed
 BLACKLIST_RES = ['refs/heads/c[0-9]+.*', 'refs/heads/master']
-{% else %}
-BLACKLIST_RES = ['refs/heads/c[0-9]+.*']
-{% endif %}
 # Pushing to (f|epel|el|olpc)(num+) that is not previously approved
 # (supported branches, ie: configured and active in PDC) is not allowed.
 UNSPECIFIED_BLACKLIST_RES = ['master',
