distgit/pagure:Prevent creating main or rawhide without having it in PDC
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -74,7 +74,8 @@ RCM_BRANCHES = ['refs/heads/f[0-9]+', 'refs/tags/.*', 'refs/heads/.*']
 BLACKLIST_RES = ['refs/heads/c[0-9]+.*', 'refs/heads/master']
 # Pushing to (f|epel|el|olpc)(num+) that is not previously approved
 # (supported branches, ie: configured and active in PDC) is not allowed.
-UNSPECIFIED_BLACKLIST_RES = ['master',
+UNSPECIFIED_BLACKLIST_RES = ['refs/heads/main',
+                             'refs/heads/rawhide',
                              'refs/heads/f[0-9]+',
                              'refs/heads/epel[0-9]+',
                              'refs/heads/el[0-9]+',
