--- a/playbooks/groups/bodhi-backend.yml
+++ b/playbooks/groups/bodhi-backend.yml
@@ -29,6 +29,7 @@
   - nagios_client
   - collectd/base
   - hosts
+  - { role: ipa/client, when: env == "staging" }
   - { role: fas_client, when: env != "staging" }
   - sudo
   - rkhunter
