--- a/playbooks/groups/busgateway.yml
+++ b/playbooks/groups/busgateway.yml
@@ -16,6 +16,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }/
   - collectd/base
   - fedmsg/base
   - sudo
