--- a/playbooks/groups/mariadb-server.yml
+++ b/playbooks/groups/mariadb-server.yml
@@ -20,6 +20,7 @@
   - base
   - rkhunter
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }/
   - nagios_client
   - hosts
   - mariadb_server
