--- a/playbooks/groups/mirrormanager.yml
+++ b/playbooks/groups/mirrormanager.yml
@@ -16,6 +16,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }/
   - sudo
   - collectd/base
   - { role: openvpn/client, when: env != "staging" and inventory_hostname.startswith('mm-frontend')  }
