--- a/playbooks/groups/odcs.yml
+++ b/playbooks/groups/odcs.yml
@@ -19,6 +19,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
+  - { role: ipa/client, when: env == "staging" }/
   - rsyncd
   - sudo
   - collectd/base
