--- a/playbooks/groups/github2fedmsg.yml
+++ b/playbooks/groups/github2fedmsg.yml
@@ -21,7 +21,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }/
+  - { role: ipa/client, when: env == "staging" }
   - collectd/base
   - rsyncd
   - sudo
