--- a/playbooks/groups/bodhi-backend.yml
+++ b/playbooks/groups/bodhi-backend.yml
@@ -30,7 +30,7 @@
   - collectd/base
   - hosts
   - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }/
+  - { role: ipa/client, when: env == "staging" }
   - sudo
   - rkhunter
   - { role: fedmsg/base, when: env != "staging" }
