--- a/playbooks/groups/certgetter.yml
+++ b/playbooks/groups/certgetter.yml
@@ -16,7 +16,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }/
+  - { role: ipa/client, when: env == "staging" }
   - rsyncd
   - sudo
   - apache
