--- a/playbooks/groups/koji-hub.yml
+++ b/playbooks/groups/koji-hub.yml
@@ -28,7 +28,7 @@
   - nagios_client
   - hosts
   - { role: fas_client, when: env != "staging" }
-  - { role: ipa/client, when: env == "staging" }/
+  - { role: ipa/client, when: env == "staging" }
   - collectd/base
   - apache
   - role: keytab/service
