pagure: allow the commit ACL on API token to not be project-specific
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/pagure/templates/pagure.cfg
+++ b/roles/pagure/templates/pagure.cfg
@@ -391,6 +391,7 @@ CROSS_PROJECT_ACLS = [
     'pull_request_comment',
     'pull_request_merge',
     'pull_request_flag',
+    'commit',
 ]
 
 BLACKLISTED_GROUPS = ['forks', 'group', 'rpms', 'modules', 'container', 'tests']
