add the new certs that will need to be installed. They will need to be properly installed and then the other configs need to use them

--- a/roles/copr/backend/tasks/install_certs.yml
+++ b/roles/copr/backend/tasks/install_certs.yml
@@ -1,6 +1,10 @@
 - name: copy httpd ssl certificates
   copy: src="{{ private }}/files/httpd/{{ item }}" dest="/etc/lighttpd/{{ item }}" owner=root group=root mode=0600
   with_items:
+  - copr-be.cloud.fedoraproject.org.key
+  - copr-be.cloud.fedoraproject.org.cert
+  - copr-be.cloud.fedoraproject.org.pem
+  - copr-be.cloud.fedoraproject.org.intermediate.cert
   - copr.fedorainfracloud.org.key
   - copr.fedorainfracloud.org.crt
   - copr.fedorainfracloud.org.pem
