buildvm / staging: add ipa/client to setup ssh/sudo access.
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/buildvm.yml
+++ b/playbooks/groups/buildvm.yml
@@ -22,6 +22,7 @@
   roles:
     - base
     - hosts
+    - { role: ipa/client, when: env == "staging" }
     - {
         role: nfs/client,
         mnt_dir: "/mnt/fedora_koji",
