Add back regindexer and revert httpd config until flatpak-indexer is ready
While we're getting flatpak-indexer tested and working in staging, we still
need regindexer, and we don't want the httpd config changes that are
part of the regindexer => flatpak-indexer change.

Fixes: https://pagure.io/fedora-infrastructure/issue/9631
Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/httpd/reverseproxy/templates/reversepassproxy.registry-generic.conf
+++ b/roles/httpd/reverseproxy/templates/reversepassproxy.registry-generic.conf
@@ -32,37 +32,37 @@ RewriteRule ^/v2/(.*)$ http://oci-registry01:5000/v2/$1 [P,L]
 {% endif %}
 RewriteRule ^/v2/(.*)$ http://localhost:10048/v2/$1 [P,L]
 
-RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &tag=testing
 RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
 RewriteRule "^/index/static$" /index/flatpak-testing-%1.json [L,PT]
 
-RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &tag=testing
 RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
-RewriteRule "^/index/static$" /index/flatpak-testing-%1-annotations.json [L,PT]
+RewriteRule "^/index/static$" /index/flatpak-testing-%1-labels.json [L,PT]
 
-RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
 RewriteRule "^/index/static$" /index/flatpak-%1.json [L,PT]
 
-RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
-RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
-RewriteRule "^/index/static$" /index/flatpak-%1-annotations.json [L,PT]
-
 RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteCond "&%{QUERY_STRING}" &architecture=([^&]+)
+RewriteRule "^/index/static$" /index/flatpak-%1-labels.json [L,PT]
+
+RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteCond "&%{QUERY_STRING}" &tag=testing
 RewriteRule "^/index/static$" /index/flatpak-testing.json [L,PT]
 
-RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
-RewriteCond "&%{QUERY_STRING}" &tag=testing
-RewriteRule "^/index/static$" /index/flatpak-testing-annotations.json [L,PT]
-
 RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteCond "&%{QUERY_STRING}" &tag=testing
+RewriteRule "^/index/static$" /index/flatpak-testing-labels.json [L,PT]
+
+RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
 RewriteRule "^/index/static$" /index/flatpak.json [L,PT]
 
-RewriteCond "&%{QUERY_STRING}" &annotation(%3A|:)org.flatpak.ref(%3A|:)exists=1
-RewriteRule "^/index/static$" /index/flatpak-annotations.json [L,PT]
+RewriteCond "&%{QUERY_STRING}" &label(%3A|:)org.flatpak.ref(%3A|:)exists=1
+RewriteRule "^/index/static$" /index/flatpak-labels.json [L,PT]
 
 DocumentRoot /srv/web/registry-index/
 
@@ -87,7 +87,6 @@ SSLOptions +FakeBasicAuth
 
 Alias "/index/" "/srv/web/registry-index/index/"
 Alias "/app-icons/" "/srv/web/registry-index/icons/"
-Alias "/deltas/" "/srv/web/registry-index/deltas/"
 
 <Directory “/srv/web/registry-index/index/">
     Options +FollowSymLinks
@@ -100,15 +99,6 @@ Alias "/deltas/" "/srv/web/registry-index/deltas/"
 </Directory>
 
 <Directory "/srv/web/registry-index/icons/">
-    ExpiresActive on
-    ExpiresDefault "access plus 1 year"
-
-    AllowOverride None
-    Options +Indexes
-    Require all granted
-</Directory>
-
-<Directory "/srv/web/registry-index/deltas/">
     ExpiresActive on
     ExpiresDefault "access plus 1 year"
 
