--- a/playbooks/groups/sundries.yml
+++ b/playbooks/groups/sundries.yml
@@ -27,6 +27,8 @@
   - { role: geoip-city-wsgi/app,  when: ansible_distribution_major_version|int <= 7 and ansible_distribution == 'RedHat' }
   - role: easyfix/gather
     when: master_sundries_node|bool
+  - role: regindexer/build
+    when: master_sundries_node|bool
   - role: bz_review_report
     when: master_sundries_node|bool and env != "staging"
   - rsyncd
