compose-tracker: check out correct branch for prod
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/openshift-apps/compose-tracker/templates/buildconfig.yml
+++ b/roles/openshift-apps/compose-tracker/templates/buildconfig.yml
@@ -10,7 +10,7 @@ spec:
 {% if env == "staging" %}
       ref: staging
 {% else %}
-      ref: master 
+      ref: main 
 {% endif %}
       uri: https://pagure.io/releng/compose-tracker.git
     type: Git
