copr-be: use the new SSL certificate

--- a/roles/copr/backend/templates/lighttpd/lighttpd.conf
+++ b/roles/copr/backend/templates/lighttpd/lighttpd.conf
@@ -481,8 +481,8 @@ server.upload-dirs = ( "/var/tmp" )
 # production still uses normal configuration
 $SERVER["socket"] == "{{ https_bind }}" {
   ssl.engine = "enable"
-  ssl.pemfile = "/etc/lighttpd/copr.fedorainfracloud.org.pem"
-  ssl.ca-file = "/etc/lighttpd/copr.fedorainfracloud.org.intermediate.crt"
+  ssl.pemfile = "/etc/lighttpd/copr-be.cloud.fedoraproject.org.pem"
+  ssl.ca-file = "/etc/lighttpd/copr-be.cloud.fedoraproject.org.intermediate.cert"
   ssl.disable-client-renegotiation = "enable"
   ssl.use-sslv2 = "disable"
   ssl.use-sslv3 = "disable"
