Typo in the route reference for prest in monitor dashboards.

--- a/playbooks/openshift-apps/monitor_dashboard.yml
+++ b/playbooks/openshift-apps/monitor_dashboard.yml
@@ -101,7 +101,7 @@
 
   - role: openshift/object
     app: monitor-dashboard
-    file: pgrest_route.yml
+    file: prest_route.yml
     objectname: prest_route.yml
 
   - role: openshift/object
